style1.css
/* ... */
a.filtres 
{
display:flex;
text-decoration:none;
}
.filtres:hover
{
background-color: #DEEBFF;   
}
.Font_border
{
display:block;
display:flex;
align-items:center;
justify-content:center;
background-color: #DEEBFF;
border:solid rgb(119, 184, 238) 0.2rem;
border-radius:50% ;
width:5rem;
height:5rem;
text-align:center;   
}
.titres_filtres
{
color:black;
padding-left:1.5rem;
}
.icoandresult
{
  display:flex;
  align-items:baseline;
  margin-bottom:2rem;
  
}
/*Barre de recherche*/
.rechercher
{
  display:flex;
  background-color:blue;
  color:white;
  font-weight:bold;
  width:14rem;
  justify-content:center;
  align-items:center;
  font-size:1.6rem;
  font-weight:700;  
  border-radius: 0rem 1.5rem 1.5rem 0;
}
.rechercher a
{
  text-decoration:none;
  color:white;
}

.commentaire_recherche
{ 
font-family:'ralewaythin';
font-size:1.6rem;
padding-left:3.2rem;
font-weight:400;
}

.bloc_heberg_popu /*section liant cards heberg et populaires*/
{
display:flex;
flex-direction: column;
flex-wrap: wrap;
margin-top: 3rem;
width:auto;
height:63rem;

 }
 .bloc_heberg_popu a
   { 
    text-decoration: none;
    color: black;
    width:40rem;
  }
 /*reglages couleurs etoiles*/
 :root
 {
  --primary-color: #0065FC;
  --secondary-color: #DEEBFF;
  --tertiary-color: #F2F2F2;
  --tertiary-color-alt: #D9D9D9;
}
.staravis i
{
  color:#0065fc;
}
.fa-star {
color: var(--primary-color);
}
.fa-star.unchecked {
color: var(--tertiary-color-alt);
}
/*bloc liants titres et cards hebergements*/
  
  .titres_hosting_main_cards
  {
  
    width:88rem;
    height:62rem;
    border-radius: 1.5rem;
    background-color: #F2F2F2;
  }
.hosting_main_cards
{
  visibility:hidden;
display:flex;
align-items:center;
flex-wrap:wrap;
width:88rem;
height:45rem;
box-sizing: border-box;
margin-right:2em;
margin-bottom:3.2rem;
}
.more
{
font-size:1.8rem;
font-weight:700;
margin-left:4rem;
}
.hostingcards
{
  display:flex;
  justify-content:center;
  flex-wrap: wrap;
  height:18rem;
  width:23.6rem;
  background-color:#ffffff;
  border-radius: 1.8rem; 
  padding-right:1rem;
  padding-left:1rem;
  padding-top:1rem ;
  margin-left:3rem;
  
}
/*titres haut et bas bloc hebergements*/
#Hébergement 
{
  display:flex;
color:black;
font-size:2.4rem; 
margin-left:3.5rem;
visibility:hidden;
}
.more_view
{
font-size:1.8rem;
font-weight:700;
margin-left:4rem;
}

/*cards images et contenus*/

.hosting_main_cards a img
{
  visibility:hidden;
  height:11rem;
  width:24rem;
  border-radius:1rem 1rem 0 0;
  object-fit:cover;
}

.staravis
{
margin:0 0.75rem 0.25rem 0.75rem;
}
.CardTitle
{
  visibility:hidden;
  font-weight: bold;
  margin:0.25rem 0.75rem 0 0.75rem;
  font-size:1.87rem;
}
.cart_description 
{visibility:hidden;
  display:flex;
  font-size:1.6rem;
  margin:0.25rem 0.75rem 0.25rem 0.75rem;
}
/*travail css sur le bloc de droite populaires*/

aside h1 
{

  font-size:2.4rem;
  font-weight:700;
}
.right_sideheberg
{ 
  visibility:hidden;
  display:flex;
  flex-direction:column;
  flex-wrap:wrap;
  background-color: #F2F2F2;
  width:42rem;
  height:62rem;
  border-radius:1.5rem;

  
  
}
.popular_cards 
{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction:row;
  flex-wrap: wrap;
  margin-left: 1.25rem;
  margin-right: 1.875rem; 
}
.descriptionpopu
{
  display:flex;
  flex-direction: column;
}

article  {
  display: flex;
  width:35rem;
  margin: 1rem 2rem 0.5rem 1.5rem;
  padding:0.35rem;
  background-color: rgb(255, 255, 255);
  border-radius: 1rem;
  box-shadow: 0.2rem 0.1rem 0.5rem 0.2rem rgb(209 209 209);
  
}

aside img 
{
  width: 12.8rem;
  height:12.5rem;
  border-radius: 1rem 0 0 1rem;
  object-fit:cover;
  flex-shrink:0;
}
aside div:first-child
{
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 1.5rem;
  margin-left:1.5rem;

}
aside div:first-child i {
  color: black;
  margin-top: 0.5rem;
  font-size:2.5rem;
}

.CardTitleAside
{ 
margin:0.35rem 0.75rem 0 1.2rem;
font-size:1.87rem;
font-weight:700;
}
.cart_description_Aside
{
  
  margin-left:1.2rem;
  font-size:1.6rem;
  margin-top:0;
}
p.stars_Aside 
{
  display:flex;
  justify-content: flex-end;
  width:6.5rem;
  margin-left:1.2rem;

}
/*container sections gauche et droite activites*/
#main2
{
  display:flex;
}
/*bloc gauche et droite activites*/
.activites1
{
  display:flex;
  width:65rem;
  height:44.5rem;
}

.activites2
{
display:flex;
width:65rem;
height:44.5rem;
padding-left:3.8rem;   
}

.activites1 a,.activites2 /*tous les liens des deux sections bloc acti*/
{
  text-decoration: none;
  color:black;
}


/*bloc images activités*/
img.vp
{
    width:30rem; 
    height:39rem;
    border-radius:1.5rem 1.5rem 0 0;
    object-fit:cover;
}
img.fort_pomegues 
{
    width:30rem;
    height:18rem;
    object-fit: cover;
    border-radius:1.5rem 1.5rem 0 0;
      
}
img.idf 
{
width:30rem;
height:11rem; 
object-fit:cover;
border-radius:1.5rem 1.5rem 0 0;
}

.jumelé 
{       
display:flex;
flex-direction:column;
height:44.5rem;
width:30rem;
margin-left:4.4rem;
}

/*bloc containers cards*/
.acticard1
{
display:flex;
height:44.5rem;
width:30rem;
box-shadow:0 0 2rem #afaeaed7;
border-radius:1.5rem 1.5rem 0 0;

}
.acticard2
{
  display:flex;
  height:23.5rem;
  width:30rem;
  box-shadow:0 0 2rem #afaeaed7;
  border-radius:1.5rem 1.5rem 0 0;
}
.acticard3
{
  display:flex;
  height:16rem;
  width:30rem;
  box-shadow:0 0 2rem #afaeaed7;
  border-radius:1.5rem 1.5rem 0 0;
  margin-top:5rem;
}
.titleactivity
{
font-size:1.8rem;
margin:0.1rem 1.5rem 0 3rem;
}
.acticard4
{
  display:flex;
height:44.5rem;
width:30rem;
box-shadow:0 0 2rem #afaeaed7;
border-radius:1.5rem 1.5rem 0 0;
}
.jumelé2
{
  display:flex;
flex-direction:column;
height:44.5rem;
width:30rem;
margin-left:4.4rem;
}
.acticard5
{
  display:flex;
  height:23.5rem;
  width:30rem;
  box-shadow:0 0 2rem #afaeaed7;
  border-radius:1.5rem 1.5rem 0 0;

}
/* ... */

